# AgentLangGraph

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
src/agent_builder/: __init__.py  builder.py  llm.py  schemas.py  state.py  tools.py
src/agent_builder/patterns/: __init__.py  plan_execute.py  react.py  reflection.py  supervisor.py
src/agents/: presets.py
src/agents/image_gen/: agent.py  tools.py
src/playground/api/: main.py  routes.py
src/playground/frontend/static/: app.js  style.css
src/playground/frontend/templates/: index.html
tests/: test_api.py  test_schemas.py
