[project]
name = "agent-langgraph"
version = "0.1.0"
description = "Agent Builder & Testing Playground using LangGraph"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph-checkpoint>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "websockets>=14.0",
    "sse-starlette>=2.0",
    "eval-type-backport>=0.2.0",
    "replicate>=1.0",
]

[project.optional-dependencies]
openai = [
    "langchain-openai>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
